Twenty Fourteen: improve display for elements in the featured content area by preventing titles from breaking and letting content overflow with an ellipsis. Props obenland, fixes #25053. Built from https://develop.svn.wordpress.org/trunk@25758
git-svn-id: http://core.svn.wordpress.org/trunk@25671 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/rtl.css
+++ b/wp-content/themes/twentyfourteen/rtl.css
@@ -446,7 +446,7 @@ blockquote.alignleft {
 		padding: 36px 0 0 10px;
 	}
 
-	#featured-content .hentry {
+	.featured-content .hentry {
 		float: right;
 	}
 }
@@ -628,7 +628,7 @@ blockquote.alignleft {
 		margin: 0 -27.31707317% 0 0;
 	}
 
-	#featured-content {
+	.featured-content {
 		padding-right: 222px;
 		padding-left: 0;
 	}
